@@ -208,6 +208,13 @@
 #define GPIOR0	_SFR_IO8(0x1E)
 
 #define EECR   _SFR_IO8(0x1F)
+/* EECR - EEPROM Control Register */
+#define EEPM1   5
+#define EEPM0   4
+#define EERIE   3
+#define EEMPE   2
+#define EEPE    1
+#define EERE    0
 
 #define EEDR   _SFR_IO8(0X20)
 
