@@ -2,6 +2,7 @@
 
 	* doc/api/sections.dox: catch up with .init4 reality (fix for
 	bug #14262)
+	* include/avr/iomxx4.h: define the EECR bits.
 
 2005-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
